[chore] update favicon

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- Mobile Specific Meta -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="assets/css/owl.carousel.css">
     <link rel="stylesheet" href="assets/css/fontawesome-all.css">
     <link rel="stylesheet" href="assets/css/animate.css">
@@ -883,7 +884,7 @@
     </div>
     <div class="nio-dia-footer-copyright pera-content">
         <div class="container">
-            <p>2021 © All rights reserved by<a href="index.html"> Code Chore</a></p>
+            <p>2022 © All rights reserved by<a href="index.html"> Code Chore</a></p>
         </div>
     </div>
 </section>
