[chore] update content and spacing

--- a/index.html
+++ b/index.html
@@ -94,12 +94,10 @@
     <div class="container">
         <div class="nio-dia-banner-content position-relative">
             <div class="nio-dia-banner-text headline pera-content">
-                <span>We are CodeChore</span>
-                <h1>World Leading Digital Agency</h1>
-                <p>The core value of Code Chore is a desire to make sure that you, our customer gets a good deal. we
-                    make
-                    it our mission to ensure the final product of your work is always perfect, often far above our
-                    clients initial expectations. </p>
+                <span>With CodeChore™️ Solutions</span>
+                <h1>Business Management Became Easier</h1>
+                <p>CodeChores™️ delivers professional solutions for medium and large enterprises. Let us guide you to a
+                    solution that will fit your needs, ease your tasks and solve your problems. </p>
                 <a class="nio-dia-banner-btn text-center" href="about.html">About Us</a>
             </div>
             <div class="nio-dia-banner-img">
