--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
             <div class="nio-dia-main-header-menu">
                 <div class="header-dia-cta-btn text-center float-right">
-                    <a href="contact.html">Get A Quote</a>
+                    <a href="#nio-dia-contact">Get A Quote</a>
                 </div>
                 <nav class="nio-dia-main-navigation float-right one-page-scroll-2 clearfix ul-li">
                     <ul id="nio-dia-main-nav" class="nav navbar-nav clearfix">
@@ -95,10 +95,10 @@
         <div class="nio-dia-banner-content position-relative">
             <div class="nio-dia-banner-text headline pera-content">
                 <span>With CodeChore™️ Solutions</span>
-                <h1>Business Management Became Easier</h1>
+                <h1>Management Became Easier</h1>
                 <p>CodeChores™️ delivers professional solutions for medium and large enterprises. Let us guide you to a
-                    solution that will fit your needs, ease your tasks and solve your problems. </p>
-                <a class="nio-dia-banner-btn text-center" href="about.html">About Us</a>
+                    solution that fits your needs and ease your tasks. </p>
+                <a class="nio-dia-banner-btn text-center" href="#nio-dia-about">About Us</a>
             </div>
             <div class="nio-dia-banner-img">
                 <img src="assets/img/home-3/img/slider1.png" alt="">
@@ -784,6 +784,52 @@
                             <form action="#">
                                 <input type="email" placeholder="Your email here">
                                 <button><i class="fas fa-envelope"></i></button>
+                            </form>
+                            <div id="nio-dia-contact" ></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="nio-dia-footer-contact-form">
+        <div class="container">
+            <div class="nio-dia-footer-contact-us-wrapper">
+                <div class="row">
+                    <div class="col-lg-4">
+                        <div class="nio-dia-section-title headline pera-content">
+                            <span>Get In Touch</span>
+                            <h2>Contact</h2>
+                        </div>
+                    </div>
+                    <div class="col-lg-8">
+                        <div class="nio-dia-footer-contact-us-form">
+                            <form action="#">
+                                <div class="row">
+                                    <div class="col-lg-6">
+                                        <div class="contact-form-input">
+                                            <input type="text" placeholder="Your name">
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-6">
+                                        <div class="contact-form-input">
+                                            <input type="text" placeholder="Your Mail">
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-12">
+                                        <div class="contact-form-input">
+                                            <input type="text" placeholder="Your Phone no.">
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-12">
+                                        <div class="contact-form-input">
+                                            <textarea placeholder="Message..."></textarea>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="nio-dia-banner-btn text-center">
+                                    <button type="submit"> Submit</button>
+                                </div>
                             </form>
                         </div>
                     </div>
