[chore] update modules content

--- a/index.html
+++ b/index.html
@@ -121,12 +121,12 @@
                             <i class="flaticon-092-diagram"></i>
                         </div>
                         <div class="nio-dia-intro-text headline pera-content">
-                            <h3><a href="service-single.html">Creative Design</a></h3>
-                            <p>Creative Department has the talent, expertise, and capability of a full service creative
-                                agency.</p>
-                            <div class="nio-dia-intro-arrow">
-                                <a href="service-single.html"><i class="fas fa-long-arrow-alt-right"></i></a>
-                            </div>
+                            <h3><a href="service-single.html">STUDY</a></h3>
+                            <p>Being customer-focused help us to understand you better and align products and services
+                                to create great value. To assist you best, our business analysts study your business and
+                                what you are looking for.
+                                Identifying and meeting your needs should be the focal point of every business to build
+                                a solid solution. </p>
                         </div>
                     </div>
                 </div>
@@ -136,11 +136,11 @@
                             <i class="flaticon-167-gear-1"></i>
                         </div>
                         <div class="nio-dia-intro-text headline pera-content">
-                            <h3><a href="service-single.html">Development</a></h3>
-                            <p>designing, engineering, supporting, and evolving various software types.</p>
-                            <div class="nio-dia-intro-arrow">
-                                <a href="service-single.html"><i class="fas fa-long-arrow-alt-right"></i></a>
-                            </div>
+                            <h3><a href="service-single.html">PLAN</a></h3>
+                            <p>Planning software can be a powerful tool to organize projects and resources into phases
+                                and tasks with attainable deadlines – all in one place. Instead of alternating between
+                                systems and manually extracting data, you can integrate the software into existing
+                                business systems to automate data flow and Business Intelligence (BI).</p>
                         </div>
                     </div>
                 </div>
@@ -150,12 +150,36 @@
                             <i class="flaticon-017-bell"></i>
                         </div>
                         <div class="nio-dia-intro-text headline pera-content">
-                            <h3><a href="service-single.html">Online Marketing</a></h3>
-                            <p>We create the best possible strategy to promote your website. Increasing of the position
-                                in Google’s page ranking system.</p>
-                            <div class="nio-dia-intro-arrow">
-                                <a href="service-single.html"><i class="fas fa-long-arrow-alt-right"></i></a>
-                            </div>
+                            <h3><a href="service-single.html">DOCUMENT</a></h3>
+                            <p>Documentation should specify the way solution solves the your problems and the way
+                                solution meets or exceeds the requirements results in a benefit. Documentation
+                                encourages knowledge sharing, which empowers our team to understand how processes work
+                                and what finished projects typically look like. </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="600ms" data-wow-duration="1500ms">
+                    <div class="nio-dia-intro-innerbox text-center">
+                        <div class="nio-dia-intro-icon">
+                            <i class="flaticon-017-bell"></i>
+                        </div>
+                        <div class="nio-dia-intro-text headline pera-content">
+                            <h3><a href="service-single.html">DEVELOP</a></h3>
+                            <p>We develop the needed solution using agile methodologies. Well executed Agile software
+                                development methodology help us significantly improve the quality of our software at
+                                each release.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="600ms" data-wow-duration="1500ms">
+                    <div class="nio-dia-intro-innerbox text-center">
+                        <div class="nio-dia-intro-icon">
+                            <i class="flaticon-017-bell"></i>
+                        </div>
+                        <div class="nio-dia-intro-text headline pera-content">
+                            <h3><a href="service-single.html">DEPLOY</a></h3>
+                            <p>We will deploy your solution(s) following automated development pipelines and CI/CD based
+                                on your demands.</p>
                         </div>
                     </div>
                 </div>
@@ -785,7 +809,7 @@
                                 <input type="email" placeholder="Your email here">
                                 <button><i class="fas fa-envelope"></i></button>
                             </form>
-                            <div id="nio-dia-contact" ></div>
+                            <div id="nio-dia-contact"></div>
                         </div>
                     </div>
                 </div>
