--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0ms" data-wow-duration="1500ms">
                     <div class="nio-dia-intro-innerbox text-center">
                         <div class="nio-dia-intro-icon">
-                            <i class="flaticon-092-diagram"></i>
+                            <i class="flaticon-150-book-1"></i>
                         </div>
                         <div class="nio-dia-intro-text headline pera-content">
                             <h3><a href="service-single.html">STUDY</a></h3>
@@ -126,14 +126,14 @@
                                 to create great value. To assist you best, our business analysts study your business and
                                 what you are looking for.
                                 Identifying and meeting your needs should be the focal point of every business to build
-                                a solid solution. </p>
+                                a solid solution.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="300ms" data-wow-duration="1500ms">
                     <div class="nio-dia-intro-innerbox text-center">
                         <div class="nio-dia-intro-icon">
-                            <i class="flaticon-167-gear-1"></i>
+                            <i class="flaticon-055-curriculum"></i>
                         </div>
                         <div class="nio-dia-intro-text headline pera-content">
                             <h3><a href="service-single.html">PLAN</a></h3>
@@ -147,11 +147,11 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="600ms" data-wow-duration="1500ms">
                     <div class="nio-dia-intro-innerbox text-center">
                         <div class="nio-dia-intro-icon">
-                            <i class="flaticon-017-bell"></i>
+                            <i class="flaticon-017-fill-text"></i>
                         </div>
                         <div class="nio-dia-intro-text headline pera-content">
                             <h3><a href="service-single.html">DOCUMENT</a></h3>
-                            <p>Documentation should specify the way solution solves the your problems and the way
+                            <p>Documentation should specify the way solution solves the problems and the way
                                 solution meets or exceeds the requirements results in a benefit. Documentation
                                 encourages knowledge sharing, which empowers our team to understand how processes work
                                 and what finished projects typically look like. </p>
@@ -161,7 +161,7 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="600ms" data-wow-duration="1500ms">
                     <div class="nio-dia-intro-innerbox text-center">
                         <div class="nio-dia-intro-icon">
-                            <i class="flaticon-017-bell"></i>
+                            <i class="flaticon-017-code"></i>
                         </div>
                         <div class="nio-dia-intro-text headline pera-content">
                             <h3><a href="service-single.html">DEVELOP</a></h3>
@@ -174,7 +174,7 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="600ms" data-wow-duration="1500ms">
                     <div class="nio-dia-intro-innerbox text-center">
                         <div class="nio-dia-intro-icon">
-                            <i class="flaticon-017-bell"></i>
+                            <i class="flaticon-046-gear"></i>
                         </div>
                         <div class="nio-dia-intro-text headline pera-content">
                             <h3><a href="service-single.html">DEPLOY</a></h3>
