[chore] update modules content color

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="600ms" data-wow-duration="1500ms">
                     <div class="nio-dia-intro-innerbox text-center">
                         <div class="nio-dia-intro-icon">
-                            <i class="flaticon-017-fill-text"></i>
+                            <i class="flaticon-180-document"></i>
                         </div>
                         <div class="nio-dia-intro-text headline pera-content">
                             <h3><a href="service-single.html">DOCUMENT</a></h3>
@@ -174,7 +174,7 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="600ms" data-wow-duration="1500ms">
                     <div class="nio-dia-intro-innerbox text-center">
                         <div class="nio-dia-intro-icon">
-                            <i class="flaticon-046-gear"></i>
+                            <i class="flaticon-044-code"></i>
                         </div>
                         <div class="nio-dia-intro-text headline pera-content">
                             <h3><a href="service-single.html">DEPLOY</a></h3>
