--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="600ms" data-wow-duration="1500ms">
                     <div class="nio-dia-intro-innerbox text-center">
                         <div class="nio-dia-intro-icon">
-                            <i class="flaticon-044-code"></i>
+                            <i class="flaticon-045-code-1"></i>
                         </div>
                         <div class="nio-dia-intro-text headline pera-content">
                             <h3><a href="service-single.html">DEPLOY</a></h3>
