--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
                     <div class="col-lg-6 wow fadeInUp" data-wow-delay="600ms" data-wow-duration="1500ms">
                         <div class="nio-dia-service-innerbox position-relative">
                             <div class="nio-dia-service-icon text-center float-left">
-                                <i class="flatico-143-physics"></i>
+                                <i class="flaticon-143-physics"></i>
                             </div>
                             <div class="nio-dia-service-text headline pera-content">
                                 <h3><a href="service-single.html">Cloud Services</a></h3>
