--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
                 </div>
                 <div class="col-md-4 col-sm-6">
                     <div class="nio-dia-counterup-innerbox clearfix headline">
-                        <h2><span class="nio-count">3</span>M</h2>
+                        <h2><span class="nio-count">3</span>K</h2>
                         <h3>Deployments and Installations</h3>
                     </div>
                 </div>
