[chore] update content

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                             <a href="#nio-dia-about">About</a>
                         </li>
                         <li><a href="#nio-dia-service">Service </a></li>
-                        <li><a href="#nio-dia-portfolio">Case Study</a></li>
+                        <!--                        <li><a href="#nio-dia-portfolio">Case Study</a></li>-->
                         <li><a href="#nio-dia-team">Team</a></li>
                         <!--<li><a href="#nio-dia-blog">Blog</a></li>-->
                     </ul>
@@ -75,7 +75,7 @@
                                 <a href="#nio-dia-about">About</a>
                             </li>
                             <li><a href="#nio-dia-service">Service </a></li>
-<!--                            <li><a href="#nio-dia-portfolio">Case Study</a></li>-->
+                            <!--                            <li><a href="#nio-dia-portfolio">Case Study</a></li>-->
                             <li><a href="#nio-dia-team">Team</a></li>
                             <!--<li><a href="#nio-dia-blog">Blog</a></li>-->
                         </ul>
@@ -594,8 +594,8 @@
                             <img src="assets/img/home-3/img/team/tm1.jpg" alt="">
                         </div>
                         <div class="nio-dia-team-text headline">
-                            <span>Co-Founder & Lead Product</span>
-                            <h3><a href="team-single.html">ِAhmed Arafa</a></h3>
+                            <span>Co-Founder & Lead PM</span>
+                            <h3><a href="team-single.html">Ahmed Arafa</a></h3>
                             <div class="nio-dia-team-social">
                                 <a href="#"><i class="fab fa-facebook-f"></i></a>
                                 <a href="#"><i class="fab fa-twitter"></i></a>
@@ -807,7 +807,8 @@
                     <div class="col-lg-7">
                         <div class="nio-dia-footer-newslatter-form">
                             <div class="nio-dia-nw-social float-right">
-                                <a href="https://www.facebook.com/codechore/" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                                <a href="https://www.facebook.com/codechore/" target="_blank"><i
+                                        class="fab fa-facebook-f"></i></a>
                                 <a href="#"><i class="fab fa-twitter"></i></a>
                                 <a href="#"><i class="fab fa-behance"></i></a>
                                 <a href="#"><i class="fab fa-youtube"></i></a>
@@ -888,14 +889,14 @@
                                         Oranienburger straße 45, Berlin 10117
                                     </div>
                                 </div>
-<!--                                <div class="contact-icon-text">-->
-<!--                                    <div class="w-contact-icon float-left">-->
-<!--                                        <i class="fas fa-phone"></i>-->
-<!--                                    </div>-->
-<!--                                    <div class="w-contact-text">-->
-<!--                                        1-888-452-1505-->
-<!--                                    </div>-->
-<!--                                </div>-->
+                                <!--                                <div class="contact-icon-text">-->
+                                <!--                                    <div class="w-contact-icon float-left">-->
+                                <!--                                        <i class="fas fa-phone"></i>-->
+                                <!--                                    </div>-->
+                                <!--                                    <div class="w-contact-text">-->
+                                <!--                                        1-888-452-1505-->
+                                <!--                                    </div>-->
+                                <!--                                </div>-->
                                 <div class="contact-icon-text">
                                     <div class="w-contact-icon float-left">
                                         <i class="far fa-envelope-open"></i>
@@ -908,53 +909,53 @@
                         </div>
                     </div>
                 </div>
-<!--                <div class="col-lg-2">-->
-<!--                    <div class="nio-dia-footer-widget headline pera-content ul-li-block">-->
-<!--                        <div class="nio-dia-menu-widget">-->
-<!--                            <h3 class="widget-title">Links</h3>-->
-<!--                            <ul>-->
-<!--                                <li><a href="index.html">Home</a></li>-->
-<!--                                <li><a href="service.html">Services</a></li>-->
-<!--                                <li><a href="about.html">About us</a></li>-->
-<!--                                <li><a href="team.html">Team</a></li>-->
-<!--                                &lt;!&ndash;<li><a href="blog.html">News</a></li>&ndash;&gt;-->
-<!--                            </ul>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--                <div class="col-lg-4">-->
-<!--                    <div class="nio-dia-footer-widget headline pera-content ul-li-block">-->
-<!--                        <div class="nio-dia-blog-widget">-->
-<!--                            <h3 class="widget-title">Recent News</h3>-->
-<!--                            <div class="widget-recent-blog">-->
-<!--                                <div class="widget-blog-img-text">-->
-<!--                                    <div class="widget-blog-img float-left">-->
-<!--                                        <img src="assets/img/home-3/img/blog/frc1.jpg" alt="">-->
-<!--                                    </div>-->
-<!--                                    <div class="widget-blog-text">-->
-<!--                                        <div class="blog-meta">-->
-<!--                                            <a href="blog-single.html">Dec 24, 2020</a>-->
-<!--                                        </div>-->
-<!--                                        <h4><a href="blog-single.html">Tips and tricks to boost your business today</a>-->
-<!--                                        </h4>-->
-<!--                                    </div>-->
-<!--                                </div>-->
-<!--                                <div class="widget-blog-img-text">-->
-<!--                                    <div class="widget-blog-img float-left">-->
-<!--                                        <img src="assets/img/home-3/img/blog/frc2.jpg" alt="">-->
-<!--                                    </div>-->
-<!--                                    <div class="widget-blog-text">-->
-<!--                                        <div class="blog-meta">-->
-<!--                                            <a href="blog-single.html">Dec 22, 2020</a>-->
-<!--                                        </div>-->
-<!--                                        <h4><a href="blog-single.html">Advising administration of human resource</a>-->
-<!--                                        </h4>-->
-<!--                                    </div>-->
-<!--                                </div>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                </div>-->
+                <!--                <div class="col-lg-2">-->
+                <!--                    <div class="nio-dia-footer-widget headline pera-content ul-li-block">-->
+                <!--                        <div class="nio-dia-menu-widget">-->
+                <!--                            <h3 class="widget-title">Links</h3>-->
+                <!--                            <ul>-->
+                <!--                                <li><a href="index.html">Home</a></li>-->
+                <!--                                <li><a href="service.html">Services</a></li>-->
+                <!--                                <li><a href="about.html">About us</a></li>-->
+                <!--                                <li><a href="team.html">Team</a></li>-->
+                <!--                                &lt;!&ndash;<li><a href="blog.html">News</a></li>&ndash;&gt;-->
+                <!--                            </ul>-->
+                <!--                        </div>-->
+                <!--                    </div>-->
+                <!--                </div>-->
+                <!--                <div class="col-lg-4">-->
+                <!--                    <div class="nio-dia-footer-widget headline pera-content ul-li-block">-->
+                <!--                        <div class="nio-dia-blog-widget">-->
+                <!--                            <h3 class="widget-title">Recent News</h3>-->
+                <!--                            <div class="widget-recent-blog">-->
+                <!--                                <div class="widget-blog-img-text">-->
+                <!--                                    <div class="widget-blog-img float-left">-->
+                <!--                                        <img src="assets/img/home-3/img/blog/frc1.jpg" alt="">-->
+                <!--                                    </div>-->
+                <!--                                    <div class="widget-blog-text">-->
+                <!--                                        <div class="blog-meta">-->
+                <!--                                            <a href="blog-single.html">Dec 24, 2020</a>-->
+                <!--                                        </div>-->
+                <!--                                        <h4><a href="blog-single.html">Tips and tricks to boost your business today</a>-->
+                <!--                                        </h4>-->
+                <!--                                    </div>-->
+                <!--                                </div>-->
+                <!--                                <div class="widget-blog-img-text">-->
+                <!--                                    <div class="widget-blog-img float-left">-->
+                <!--                                        <img src="assets/img/home-3/img/blog/frc2.jpg" alt="">-->
+                <!--                                    </div>-->
+                <!--                                    <div class="widget-blog-text">-->
+                <!--                                        <div class="blog-meta">-->
+                <!--                                            <a href="blog-single.html">Dec 22, 2020</a>-->
+                <!--                                        </div>-->
+                <!--                                        <h4><a href="blog-single.html">Advising administration of human resource</a>-->
+                <!--                                        </h4>-->
+                <!--                                    </div>-->
+                <!--                                </div>-->
+                <!--                            </div>-->
+                <!--                        </div>-->
+                <!--                    </div>-->
+                <!--                </div>-->
             </div>
         </div>
     </div>
