[chore] update content - remove services' details

--- a/index.html
+++ b/index.html
@@ -326,9 +326,9 @@
                                 <p>We provide expert web application development and web design services to our clients.
                                     App innovation offers a variety of website design and development services, from
                                     creating mobile web development solutions and responsive website designs. </p>
-                                <div class="nio-dia-service-more">
-                                    <a href="service-single.html"><i class="fas fa-arrow-right"></i> View Service</a>
-                                </div>
+<!--                                <div class="nio-dia-service-more">-->
+<!--                                    <a href="service-single.html"><i class="fas fa-arrow-right"></i> View Service</a>-->
+<!--                                </div>-->
                             </div>
                         </div>
                     </div>
@@ -342,9 +342,9 @@
                                 <p>A security software developer is a new breed of technologist that writes computer
                                     programs with an eye toward safeguarding computer systems and data/information. In
                                     short, we take this into count. </p>
-                                <div class="nio-dia-service-more">
-                                    <a href="service-single.html"><i class="fas fa-arrow-right"></i> View Service</a>
-                                </div>
+<!--                                <div class="nio-dia-service-more">-->
+<!--                                    <a href="service-single.html"><i class="fas fa-arrow-right"></i> View Service</a>-->
+<!--                                </div>-->
                             </div>
                         </div>
                     </div>
@@ -357,9 +357,9 @@
                                 <h3><a href="service-single.html">Mobile Application</a></h3>
                                 <p>Defining the strategy for evolving your idea into a successful app including a
                                     more significant part of this in your overall enterprise mobility strategy. </p>
-                                <div class="nio-dia-service-more">
-                                    <a href="service-single.html"><i class="fas fa-arrow-right"></i> View Service</a>
-                                </div>
+<!--                                <div class="nio-dia-service-more">-->
+<!--                                    <a href="service-single.html"><i class="fas fa-arrow-right"></i> View Service</a>-->
+<!--                                </div>-->
                             </div>
                         </div>
                     </div>
@@ -373,9 +373,9 @@
                                 <p>Nowadays software development is tightly linked to the cloud. Recent research has
                                     shown that 90% of new software is made to somehow run in a cloud environment. That
                                     is why we have a 'cloud first' mindset as a starting point.</p>
-                                <div class="nio-dia-service-more">
-                                    <a href="service-single.html"><i class="fas fa-arrow-right"></i> View Service</a>
-                                </div>
+<!--                                <div class="nio-dia-service-more">-->
+<!--                                    <a href="service-single.html"><i class="fas fa-arrow-right"></i> View Service</a>-->
+<!--                                </div>-->
                             </div>
                         </div>
                     </div>
