--- a/index.html
+++ b/index.html
@@ -244,9 +244,9 @@
                             <li>Communicate more effectively with customers, suppliers or partners</li>
                         </ul>
                     </div>
-                    <div class="nio-dia-btn text-center wow fadeInUp" data-wow-delay="600ms" data-wow-duration="1500ms">
-                        <a href="about.html">More About</a>
-                    </div>
+<!--                    <div class="nio-dia-btn text-center wow fadeInUp" data-wow-delay="600ms" data-wow-duration="1500ms">-->
+<!--                        <a href="about.html">More About</a>-->
+<!--                    </div>-->
                 </div>
             </div>
         </div>
@@ -875,6 +875,7 @@
             <div class="row">
                 <div class="col-lg-3">
                     <div class="nio-dia-footer-widget headline pera-content ul-li-block">
+                        <br>
                         <div class="nio-dia-logo-widget">
                             <div class="footer-logo">
                                 <a href="index.html"><img src="assets/img/home-3/img/logo/logo1.svg" alt=""></a>
