[chore] update content - fix form

--- a/index.html
+++ b/index.html
@@ -837,7 +837,7 @@
                     </div>
                     <div class="col-lg-8">
                         <div class="nio-dia-footer-contact-us-form">
-                            <form action="#">
+                            <form action="https://formspree.io/f/xlezvrpz" method="POST">
                                 <div class="row">
                                     <div class="col-lg-6">
                                         <div class="contact-form-input">
@@ -846,17 +846,17 @@
                                     </div>
                                     <div class="col-lg-6">
                                         <div class="contact-form-input">
-                                            <input type="text" placeholder="Your Mail">
+                                            <input required type="email" placeholder="Your Mail" name="email">
                                         </div>
                                     </div>
                                     <div class="col-lg-12">
                                         <div class="contact-form-input">
-                                            <input type="text" placeholder="Your Phone no.">
+                                            <input name="phone" type="text" placeholder="Your Phone no.">
                                         </div>
                                     </div>
                                     <div class="col-lg-12">
                                         <div class="contact-form-input">
-                                            <textarea placeholder="Message..."></textarea>
+                                            <textarea required name="message" placeholder="Message..."></textarea>
                                         </div>
                                     </div>
                                 </div>
