--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="00ms" data-wow-duration="1500ms">
                     <div class="nio-dia-team-innerbox position-relative">
                         <div class="nio-dia-team-img">
-                            <img src="assets/img/home-3/img/team/tm1.jpg" alt="">
+                            <img src="assets/img/team/badawi.jpg" alt="">
                         </div>
                         <div class="nio-dia-team-text headline">
                             <span>Co-Founder & Lead PM</span>
@@ -608,7 +608,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="200ms" data-wow-duration="1500ms">
                     <div class="nio-dia-team-innerbox position-relative">
                         <div class="nio-dia-team-img">
-                            <img src="assets/img/home-3/img/team/tm2.jpg" alt="">
+                            <img src="assets/img/team/sam.jpg" alt="">
                         </div>
                         <div class="nio-dia-team-text headline">
                             <span>Co-Founder & CTO</span>
@@ -625,7 +625,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="400ms" data-wow-duration="1500ms">
                     <div class="nio-dia-team-innerbox position-relative">
                         <div class="nio-dia-team-img">
-                            <img src="assets/img/home-3/img/team/tm3.jpg" alt="">
+                            <img src="assets/img/team/gheiaty.jpg" alt="">
                         </div>
                         <div class="nio-dia-team-text headline">
                             <span>Developer</span>
@@ -642,11 +642,11 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="600ms" data-wow-duration="1500ms">
                     <div class="nio-dia-team-innerbox position-relative">
                         <div class="nio-dia-team-img">
-                            <img src="assets/img/home-3/img/team/tm4.jpg" alt="">
+                            <img src="assets/img/team/nagham.jpg" alt="">
                         </div>
                         <div class="nio-dia-team-text headline">
                             <span>Developer</span>
-                            <h3><a href="team-single.html">Sherif Mohamed</a></h3>
+                            <h3><a href="team-single.html">Sherif Naga</a></h3>
                             <div class="nio-dia-team-social">
                                 <a href="#"><i class="fab fa-facebook-f"></i></a>
                                 <a href="#"><i class="fab fa-twitter"></i></a>
