[chore] add facebook meta for verification

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="author" content="CodeChore">
     <!-- Mobile Specific Meta -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="facebook-domain-verification" content="1rmmx7lxbx386q0p7mbv6qorlqxs9k" />
 
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="assets/css/owl.carousel.css">
